--- a/client/resources/styles/bundle.css
+++ b/client/resources/styles/bundle.css
@@ -5022,7 +5022,7 @@ svg.mdc-button__icon {
   font-size: 6rem;
   line-height: 6rem;
   font-weight: 300;
-  letter-spacing: -0.01562em;
+  letter-spacing: -0.01563em;
   text-decoration: inherit;
   text-transform: inherit; }
 
@@ -5477,6 +5477,8 @@ main {
 
 .mdc-list--three-line .mdc-list-item {
   height: 108px; }
+  .mdc-list--three-line .mdc-list-item .mdc-list-item__secondary-text {
+    line-height: 0; }
 
 .mdc-list--three-line .mdc-list-item__text {
   align-self: center; }
